added styling to divs, font colour and size, as well as a border

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,3 +6,23 @@ body {
     background: -moz-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to right, #00c0ee ,#00b7b5, #00ae87); /* Standard syntax */
 }
+
+p.intials {
+    font-size: 303px;
+    margin-top: 12%;
+    border: solid 11px white;
+    margin-left: 33%;
+    padding: 25px;
+    display: inline-block;
+}
+
+h2.name, p.intials{
+  color: white;
+  text-align: center;
+
+}
+
+h2.name {
+    margin-top: 50px;
+    font-size: 500%;
+}
