--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,8 +5,6 @@ body {
     background: -o-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to right, #00c0ee ,#00b7b5, #00ae87); /* Standard syntax */
-
-    font-family:'Josefin Sans', sans-serif;
 }
 
 p.intials {
@@ -21,7 +19,12 @@ p.intials {
 h2.name, p.intials{
   color: white;
   text-align: center;
-
+  /*font-family:'Josefin Sans', sans-serif;*/
+  /*font-family: 'Wire One', sans-serif;*/
+  /*font-family: 'Orienta', sans-serif;*/
+  /*font-family: 'Playfair Display', serif;*/
+  /*font-family: 'Playfair Display', serif;*/
+  font-family: 'Pontano Sans', sans-serif;
 }
 
 h2.name {
