--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,3 +39,161 @@ h2.name {
 div {
   text-align: center;
 }
+
+.portfolio{
+  display: none;
+  z-index: 100;
+  height: 500px;
+  width: 100%;
+  background: black;
+  opacity: 0.7;
+}
+
+.project-container {
+  height: 350px;
+  max-width: 800px;
+  clear: both;
+  border: 1px lightgrey solid;
+  position: relative;
+  overflow: hidden;
+  margin: auto;
+  margin-bottom: 50px;
+  margin-top: 20px;
+  padding-bottom: 40px;
+  background-color: white;
+  box-shadow: 2px 1px 6px 1px #00bee4;
+}
+
+.project-image {
+  width: 51%;
+  float: left;
+  max-width: 100%;
+  positon: relative;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-top: 30px;
+  height: auto;
+}
+
+img {
+  max-width: 100%;
+
+}
+
+.projects-title {
+    color: white;
+    padding: 18px 10px;
+    font-size: 22pt;
+    background: #1b1b19;
+    text-align: center;
+    margin: 20px 0px 68px 0px;
+    box-shadow: 1px 1px 1px 1px #090909;
+}
+
+.project-description {
+  width: 40%;
+  float: left;
+  padding-left: 20px;
+  padding-top: 30px
+}
+
+h1.project-title {
+    font-size: 30px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    color: darkgoldenrod;
+}
+
+h2.tools {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+    color: #dd9a37;
+}
+
+.project-description{
+  color: grey;
+}
+
+.project-github {
+  padding-top: 20px;
+}
+
+span.button {
+    border: 1px solid;
+    padding: 10px;
+    margin-left: 9px;
+    background-color: darkgoldenrod;
+    color: white;
+}
+a {
+    text-decoration: none;
+}
+
+h2.sub-heading {
+    padding: 18px 0px 5px 0px;
+    color: goldenrod;
+}
+
+.header {
+    padding: 15px;
+    color: darkgoldenrod;
+    font-size: 20pt;
+
+}
+.footer {
+  background: white;
+  color: darkgoldenrod;
+  margin-top: 60px;
+  max-width: 100%;
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+@media (max-width: 500px) {
+
+  .project-image {
+    // width: 51%;
+    /* float: left; */
+    /* max-width: 100%; */
+    positon: relative;
+    // padding-bottom: 20px;
+    // padding-left: 20px;
+    // padding-top: 30px;
+    padding: 30px 0px 20px 0px;
+    height: auto;
+    width: 100%;
+  }
+
+  .project-description{
+    width: 100%;
+  }
+
+  .project-github {
+    padding-top: 20px 0px;
+
+}
+
+.project-container {
+  height: auto;
+  background: white;
+  clear: both;
+  border: 1px lightgrey solid;
+  position: relative;
+  overflow: hidden;
+  margin: 15px 10px;
+  padding: 10px 10px 25px 10px;
+}
+
+.project-summary {
+  padding: 0px 10px 0px 5px;
+}
+
+span.button {
+  margin-left: 0px;
+
+}
