changed background color, removed positioning from the footer

--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -1,3 +1,22 @@
+body {
+
+    background: #00c0ee; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left, #00c0ee,#00b7b5, #00ae87); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, #00c0ee ,#00b7b5, #00ae87); /* Standard syntax */
+}
+
+h1.portfolio-title {
+    border: 6px solid white;
+    display: inline-block;
+    padding: 7px;
+    color: white;
+    font-size: 39pt;
+    font-family: 'Pontano Sans', sans-serif;
+    position: fixed;
+}
+
 .project-container {
   height: 350px;
   max-width: 800px;
@@ -10,7 +29,7 @@
   margin-top: 20px;
   padding-bottom: 40px;
   background-color: white;
-  box-shadow: 2px 1px 6px 1px #171616;
+  box-shadow: 2px 1px 6px 1px #00bee4;
 }
 
 .project-image {
@@ -27,10 +46,6 @@
 img {
   max-width: 100%;
 
-}
-
-body {
-  background-color: #2a2825;
 }
 
 .projects-title {
@@ -88,11 +103,22 @@ h2.sub-heading {
     color: goldenrod;
 }
 
-header.header {
+.header {
     padding: 15px;
     color: darkgoldenrod;
     font-size: 20pt;
-    display: none;
+
+}
+.footer {
+  background: white;
+  color: darkgoldenrod;
+  margin-top: 60px;
+  max-width: 100%;
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 @media (max-width: 500px) {
