added footer to header div

--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -107,7 +107,7 @@ h2.sub-heading {
     padding: 15px;
     color: darkgoldenrod;
     font-size: 20pt;
-
+    margin-bottom: 85px;
 }
 .footer {
   background: white;
