--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -30,6 +30,7 @@ h1.portfolio-title {
   padding-bottom: 40px;
   background-color: white;
   box-shadow: 2px 1px 6px 1px #00bee4;
+  border-radius: 29px;
 }
 
 .project-image {
