--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -95,7 +95,7 @@ h2.tools {
 span.button {
     border: 1px solid;
     padding: 13px;
-    background-color: #00c0ee;
+    background-color: #00b7b5;
     color: white;
     border-radius: 9px;
 }
