--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -129,6 +129,17 @@ h2.sub-heading {
 
 @media (max-width: 500px) {
 
+  body {
+
+      background: #00c0ee; /* For browsers that do not support gradients */
+      background: -webkit-linear-gradient(left, #00c0ee,#00b7b5, #00ae87); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(right, #00c0ee,#00b7b5, #00ae87); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(to right, #00c0ee ,#00b7b5, #00ae87); /* Standard syntax */
+
+
+  }
+
   .project-image {
     // width: 51%;
     /* float: left; */
