--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -120,7 +120,7 @@ h2.sub-heading {
   margin-top: 60px;
   max-width: 100%;
   text-align: center;
-  padding: 20px;
+  padding: 20px 0;
   margin-bottom: 0;
   bottom: 0;
   width: 100%;
